--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,3 +3,10 @@
   <%= link_to 'My Items', merchant_items_path(@merchant) %>
   <%= link_to 'My Invoices', merchant_invoices_path(@merchant) %>
 </nav>
+
+<h2>Favorite Customers</h2>
+<ol>
+  <% @top_five_customers.each do |customer| %>
+    <li><%= customer.full_name %> - <%= @merchant.transaction_count(customer.id) %> Purchases<br><br></li>
+  <% end %>
+</ol>
