--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -3,6 +3,6 @@
 <section id='all-merchants'>
   <h3>Merchants</h3>
     <% @merchants.each do |merchant| %>
-      <p id='merchant-<%= merchant.id %>'><<%= link_to merchant.name, admin_merchant_path(merchant) %></p>
+      <p id='merchant-<%= merchant.id %>'><%= link_to merchant.name, admin_merchant_path(merchant) %></p>
     <% end %>
 </section>
