--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <% flash.each do |type, message| %>
+      <p class='flash-message'><%= message %></p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
