--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -4,5 +4,14 @@
   <h3>Merchants</h3>
     <% @merchants.each do |merchant| %>
       <p id='merchant-<%= merchant.id %>'><%= link_to merchant.name, admin_merchant_path(merchant) %></p>
+      <%= form_with model: [admin: merchant] do |form| %>
+        <% if merchant.enabled? %>
+          <% form.hidden_field :disable, value: 'disable' %>
+          <% form.submit 'Disable' %>
+        <% else %>
+          <% form.hidden_field :enable, value: 'enable' %>
+          <% form.submit 'Enable' %>
+        <% end %>
+      <% end %>
     <% end %>
 </section>
