Refactor views code to use link_to and helper paths

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,15 +1,11 @@
 <h1>Admin Dashboard</h1>
 
 <section class="navigation" id="merchants">
-  <%= form_with url: "/admin/merchants", method: :get do |form| %>
-    <%= form.submit "Merchants" %>
-  <% end %>
+  <%= link_to("Merchants", admin_merchants_path) %>
 </section>
 
 <section class="navigation" id="invoices">
-  <%= form_with url: "/admin/invoices", method: :get do |form| %>
-    <%= form.submit "Invoices" %>
-  <% end %>
+  <%= link_to("Invoices", admin_invoices_path) %>
 </section>
 
 <section class="top_customers">
