--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,7 +12,6 @@
 </ol>
 
 <h2>Items Ready to Ship</h2>
-<% @items_ready_to_ship.each do |item| %>
-  <% invoice_id = @merchant.invoice_for_item_ready(item.id) %>
-  <%= item.name %> - <%= link_to "Invoice ##{invoice_id}", merchant_invoice_path(@merchant, Invoice.find(invoice_id)) %><br>
+<% @items_ready_to_ship.each do |invoice_item| %>
+  <%= invoice_item.item_find(invoice_item.item_id).name %> - <%= link_to "Invoice ##{invoice_item.invoice_id}", merchant_invoice_path(@merchant, invoice_item.invoice_find(invoice_item.invoice_id)) %> - <%= @merchant.item_invoice_date(invoice_item.invoice_id) %><br>
 <% end %>
