--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -4,13 +4,13 @@
   <h3>Merchants</h3>
     <% @merchants.each do |merchant| %>
       <p id='merchant-<%= merchant.id %>'><%= link_to merchant.name, admin_merchant_path(merchant) %></p>
-      <%= form_with model: [admin: merchant] do |form| %>
+      <%= form_with url: admin_merchant_path(merchant), method: :patch, local: true do |form| %>
         <% if merchant.enabled? %>
-          <% form.hidden_field :disable, value: 'disable' %>
-          <% form.submit 'Disable' %>
+          <%= form.hidden_field :status, value: 'disabled' %>
+          <%= form.submit 'Disable', id: "disable-#{merchant.id}" %>
         <% else %>
-          <% form.hidden_field :enable, value: 'enable' %>
-          <% form.submit 'Enable' %>
+          <%= form.hidden_field :status, value: 'enabled' %>
+          <%= form.submit 'Enable', id: "enable-#{merchant.id}" %>
         <% end %>
       <% end %>
     <% end %>
