--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,3 +19,8 @@
   <%= button_to "Enable", merchant_item_path(@merchant, item), method: :patch, params: {status: :enabled} %>
 </div>
 <% end %>
+
+<h3>Top Five Items</h3>
+<% @top_five_items.each do |item| %>
+  <%= link_to "#{item.name}", merchant_item_path(@merchant, item) %> $<%= item.total_revenue %><br> Top Day For <%= item.name %> Was: <%= item.best_day %><br><br>
+<% end %>
