Add best day to admin merchants view

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -32,6 +32,9 @@
       <li class='top-merchant'>
         <%= link_to merchant.name, admin_merchant_path(merchant) %> -
         <%= "$#{merchant.merchant_revenue.truncate} in sales" %>
+        <ul><li class='top-merchant-best-day'>
+          <%= "Best single day was #{merchant.best_day.strftime('%A, %B %d, %Y')}" %>
+        </li></ul>
       </li>
     <% end %>
   </ol>
