--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -7,15 +7,16 @@
 <p><%= @invoice.customer_full_name %></p>
 
 <h2>Items on this Invoice:</h2>
-  <% @items_on_invoice.each do |item| %>
-    <section id="item-<%= item.id %>">
-      <p>Name: <%= item.name %></p>
-      <p>Quantity: <%= @invoice.invoice_item_quantity(item.id) %></p>
-      <p>Sold For: $<%= @invoice.invoice_item_unit_price(item.id) %></p>
-      <p>Status: <%= @invoice.invoice_item_status(item.id).capitalize %></p>
-      <%= form_with url: merchant_invoice_item_path(@merchant, @invoice.find_invoice_item(item.id)), method: :patch, params: { status: :status }, local: true do |f|%>
-      <%= f.select :status, [:pending, :packaged, :shipped], selected: @invoice.invoice_item_status(item.id) %>
-      <%= f.submit "Update Item Status" %><br>
+  <% @invoice_items.each do |invoice_item| %>
+    <section id="invoice-item-<%= invoice_item.item.id %>">
+      <p>Name: <%= invoice_item.item_name %></p>
+      <p>Quantity: <%= invoice_item.quantity %></p>
+      <p>Sold For: $<%= '%.2f' % invoice_item.unit_price %></p>
+      <p>Status: <%= invoice_item.status_view_format %></p>
+
+      <%= form_with url: merchant_invoice_item_path(@merchant, invoice_item), method: :patch, params: { status: :status }, local: true do |f|%>
+        <%= f.select :status, [:pending, :packaged, :shipped], selected: invoice_item.status %>
+        <%= f.submit "Update Item Status" %><br>
       <% end %>
     </section>
 <% end %>
