--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,17 +6,21 @@
 
 <h3>Enabled Items</h3>
 <% @enabled_items.each do |item| %>
-<div id="item-<%= item.id %>">
-  <%= link_to "#{item.name}", merchant_item_path(@merchant, item) %><br>
-  <%= button_to "Disable", merchant_item_path(@merchant, item), method: :patch, params: {status: :disabled} %>
-</div>
+  <div id="item-<%= item.id %>">
+    <%= render partial: 'status', locals: { button_label: "Disable",
+                                            status: :disabled,
+                                            item: item
+                                          } %>
+  </div>
 <% end %>
 
 <h3>Disabled Items</h3>
 <% @disabled_items.each do |item| %>
 <div id="item-<%= item.id %>">
-  <%= link_to "#{item.name}", merchant_item_path(@merchant, item) %><br>
-  <%= button_to "Enable", merchant_item_path(@merchant, item), method: :patch, params: {status: :enabled} %>
+  <%= render partial: 'status', locals: { button_label: "Enable",
+                                          status: :enabled,
+                                          item: item
+                                        } %>
 </div>
 <% end %>
 
