--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,13 +1,5 @@
-<h1> <%= @merchant.name %> </h1>
-
-<h2>New Item</h2>
-
-<%= form_with url: merchant_items_path(@merchant), method: :post, local: true do |f|%>
-  <%= f.label :name %><br>
-  <%= f.text_field :name, value: @item.name %><br><br>
-  <%= f.label :description %><br>
-  <%= f.text_area :description, value: @item.description, maxlength: 500, rows: 8, cols: 60 %><br><br>
-  <%= f.label :selling_price %><br>
-  <%= f.number_field :unit_price, min: 0, step: 0.01, value: @item.unit_price %><br><br>
-  <%= f.submit "Submit" %><br>
-<% end %>
+<%= render partial: 'form', locals: { header_2: "New Item",
+                                      path: merchant_items_path(@merchant),
+                                      method: :post,
+                                      button_text: "Submit"
+                                    } %>
