--- a/app/views/admin/merchants/edit.html.erb
+++ b/app/views/admin/merchants/edit.html.erb
@@ -1,8 +1,4 @@
 <h1>Edit Merchant</h1>
 <section id='form'>
-  <%= form_with model: [:admin, @merchant] do |form| %>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-    <%= form.submit id: 'submit' %>
-  <% end %>
+  <%= render partial: 'form', locals: { merchant: @merchant } %>
 </section>
