--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,10 @@
 <nav class="nav">
   <%= link_to 'My Items', merchant_items_path(@merchant) %>
   <%= link_to 'My Invoices', merchant_invoices_path(@merchant) %>
+  <%= link_to 'View All Discounts', merchant_bulk_discounts_path(@merchant) %>
 </nav>
+
+
 
 <h2>Favorite Customers</h2>
 <ol>
