--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -6,7 +6,7 @@
 <% @bulk_discounts.each do |discount| %>
   <li id="bulk-discount-<%= discount.id %>">
     <%= link_to "#{discount.percentage_discount * 100}% off
-      #{discount.quantity_threshold} items" %>
+      #{discount.quantity_threshold} items", merchant_bulk_discount_path(@merchant, discount)  %>
     <%= link_to "Delete", merchant_bulk_discount_path(@merchant, discount), method: :delete %>
   </li>
 <% end %>
