--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @merchant.name %></h1>
-<h2>Percentage Discount: <%= @bulk_discount.percentage_discount %></h2>
+<h3><%= link_to "Edit", edit_merchant_bulk_discount_path(@merchant, @bulk_discount)%></h3>
+<h2>Percentage Discount: <%= @bulk_discount.percentage_discount  * 100 %>%</h2>
 <h2>Quantity Threshold: <%= @bulk_discount.quantity_threshold %></h2>
