--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -4,6 +4,7 @@
   <p>Status: <%= @invoice.status_view_format %></p>
   <p>Date Created: <%= @invoice.created_at_view_format %></p>
   <p>Total Revenue: <%= number_to_currency((@invoice.total_revenue[0])) %></p>
+  <p>Total Revenue after Discounts: <%= number_to_currency((@invoice.total_revenue_after_discounts)) %></p>
 </section>
 
 <section id='invoice_status_update'>
